yarte/tests/fails/uncompleted.rs
use yarte::Template;

#[derive(Template)]
#[template(src = "{{/o")]
struct Test;

fn main() {}
