yarte/tests/fails/uncompleted.stderr
error: proc-macro derive panicked
 --> $DIR/uncompleted.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = help: message: error
           --> $DIR/Test.hbs:1:3
            |
          1 | {{/o
            |   ^ problems parsing template source
            |
